src/test/deca/syntax/invalid/resultats/test4_comment-lex.res
'{': [@0,302:302='{',<36>,14:0]
'}': [@1,305:305='}',<37>,16:0]
'/': [@2,307:307='/',<30>,16:2]
'*': [@3,308:308='*',<4>,16:3]
